<resources>
    <string name="app_name">微信lite</string>
    <string name="weixin">微信</string>
    <string name="tongxunlu">通讯录</string>
    <string name="faxian">发现</string>
    <string name="wo">我</string>
    <string name="sendmsg">发送</string>
    <string name="send">我发</string>
    <string name="receive">我收</string>
    <string name="chatmsg">聊天信息</string>
    <string name="writetolitepal">写入数据库</string>
    <string name="sendMsg">发消息</string>
    <string name="chat_with_vedio">视频聊天</string>
    <string name="more_xiangxi">更多</string>
    <string name="search">搜索</string>
</resources>
