<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:id="@+id/linearlayout"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <include
        layout="@layout/toolbar"/>

    <!--<android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_chat"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"/>-->

    <android.support.v7.widget.RecyclerView
        android:id="@+id/msg_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/chat_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:layout_weight="1"/>

        <ToggleButton
            android:id="@+id/chat_togglebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="@string/send"
            android:textOff="@string/receive"/>

        <Button
            android:id="@+id/chat_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sendmsg"/>

    </LinearLayout>

</LinearLayout>