<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--<include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>-->

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"/>

    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <com.weixinlite.android.MyView
            android:id="@+id/weixin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scaleType="centerInside"
            app:bottomBitmap="@mipmap/weixin"
            app:text="@string/weixin"
            app:textsize="16sp"
            app:topBitmap="@mipmap/weixin_green"/>

        <com.weixinlite.android.MyView
            android:id="@+id/tongxunlu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:bottomBitmap="@mipmap/tongxunlu"
            app:text="@string/tongxunlu"
            app:textsize="16sp"
            app:topBitmap="@mipmap/tongxunlu_green"/>

        <com.weixinlite.android.MyView
            android:id="@+id/faxian"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:bottomBitmap="@mipmap/faxian"
            app:text="@string/faxian"
            app:textsize="16sp"
            app:topBitmap="@mipmap/faxian_green"/>

        <com.weixinlite.android.MyView
            android:id="@+id/wo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:bottomBitmap="@mipmap/wo"
            app:text="@string/wo"
            app:textsize="16sp"
            app:topBitmap="@mipmap/wo_green"/>

    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_layout"
        android:layout_below="@id/toolbar"/>

</RelativeLayout>
